# Centric

GUI/: Dockerfile  Gemfile  docker-compose.yml  readme.md
GUI/app/controllers/: application_controller.rb  audit_log_controller.rb  dashboard_controller.rb  login_controller.rb  user_controller.rb
GUI/app/helpers/: login_helper.rb  user_helper.rb
GUI/app/javascript/: application.js
GUI/config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
GUI/config/environments/: production.rb
GUI/lib/: authenication.json  authenication_backup.json
client_sourcecode/RTPClient/esas_rtpcli/: note.txt  pyproject.toml
client_sourcecode/RTPClient/esas_rtpcli/esas_rtpcli/: app.py
client_sourcecode/SocketIO_Client/: README.md  client.js  client_thread.js  note.txt  package-lock.json  package.json
client_sourcecode/SocketIO_Client/clientjs/: .gitignore  README.md  package-lock.json  package.json
client_sourcecode/SocketIO_Client/config/: development.js  test.js
client_sourcecode/SocketIO_Client/lib/: index.js  lib.js  soketio.js
client_sourcecode/WebSobket/: concurrent_test.py  main.py  note.txt  requirements.txt
client_sourcecode/tool_python_websocket_20230106/: README.md  exec_main.bat  main.py  requirements.txt
drive-download-20230810T040023Z-001/esas-core-v2-dev-master_20230809/: README.md  esas-core.sh  setup.sh.template  setup_smb.sh
esas-core-v2/esas-core-v2-20240207/: README.md
esas-core-v2/esas-core-v2-dev-20240207/: release.sh  setup_smb.sh
esas_core_v2.1.0/esas-core-v2-dev-master_20240129/: setup_os.sh
(+157 files in other folders)
