[tool.poetry]
name = "esas-rtpcli"
version = "0.1.0"
description = ""
authors = ["prathompong <prathompong@amivoicethai.com>"]
readme = "README.md"
packages = [{include = "esas_rtpcli"}]

[tool.poetry.scripts]
app = "app:run"

[tool.poetry.dependencies]
python = "^3.9"
scapy = "^2.5.0"
command = "^0.1.0"
pyshark = "^0.6"
requests = "^2.31.0"
pydub = "^0.25.1"
rtp = "^0.0.3"
pywave = "^0.5.0"
soundfile = "^0.12.1"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
